# aegis-link

./: .gitignore  LICENSE  README.md  analysis.ipynb  install_all.sh  linkedin_about.txt  mc_demo.sh  run_demo.sh  viz_live.py
ai_orchestrator/: main.py
engagement_engine/: config.yaml  main.py
ir_sensor/: main.py
shared/: messages.h
simulation_engine/: Manifest.toml  Project.toml  main.jl
tools/: make_assets.py
tracking_system/: CMakeLists.txt  main.cpp
webapp/: README.md  app.py  requirements.txt
